[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Menu/StartGame.gd" type="Script" id=1]
[ext_resource path="res://UI/MenuText.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu/KubernetesMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/HUDTheme.tres" type="Theme" id=4]
[ext_resource path="res://UI/MenuBackground.png" type="Texture" id=5]
[ext_resource path="res://UI/Fonts/minotaur.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/testfire.png" type="Texture" id=7]
[ext_resource path="res://UI/BurningEye.tres" type="Material" id=8]
[ext_resource path="res://UI/Images/MonkeyFaceRedEyes - Copy.png" type="Texture" id=9]
[ext_resource path="res://Audio/DoomMenu.wav" type="AudioStream" id=10]
[ext_resource path="res://UI/Fonts/Plug-NickelBlack.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://UI/Fonts/FontData/K8sMenuFont.tres" type="DynamicFont" id=12]
[ext_resource path="res://Scenes/KubernetesStateHandler.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/loading.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.141176, 0.0745098, 0.0745098, 1 )
border_width_left = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.466667, 0.466667, 0.466667, 1 )
border_blend = true
shadow_color = Color( 0.25098, 0.176471, 0.176471, 0.6 )
shadow_size = 15

[sub_resource type="Animation" id=2]
resource_name = "Bob"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1000, -0.25, 0, 0.25, 0, 880, -0.25, 0, 0.25, 0, 1000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="DynamicFont" id=3]
size = 41
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 34
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=9]
resource_name = "Spin"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.415686, 0.384314, 0.384314, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=8]
color = Color( 0.180392, 0.192157, 0.4, 1 )
thickness = 10

[sub_resource type="DynamicFont" id=11]
size = 19
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 60
outline_size = 1
outline_color = Color( 0.427451, 0.662745, 0.490196, 1 )
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 6 )

[node name="Node" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePanel" type="Panel" parent="CanvasLayer/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -565.5
margin_right = 565.5
margin_bottom = 360.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuText" type="TextureRect" parent="CanvasLayer/Menu/TitlePanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -482.028
margin_right = 501.972
margin_bottom = 380.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu"]
visible = false
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monkey face" type="Sprite" parent="CanvasLayer/Menu"]
position = Vector2( 943.55, 967.216 )
scale = Vector2( 0.505918, 0.505918 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Menu/Monkey face"]
autoplay = "Bob"
playback_speed = 0.15
anims/Bob = SubResource( 2 )

[node name="FireLeftEye" type="Particles2D" parent="CanvasLayer/Menu/Monkey face"]
position = Vector2( 411.537, 141.89 )
amount = 200
lifetime = 1.4
speed_scale = 0.35
randomness = 0.88
process_material = ExtResource( 8 )
texture = ExtResource( 7 )

[node name="FireRightEye" type="Particles2D" parent="CanvasLayer/Menu/Monkey face"]
position = Vector2( -378.606, 141.89 )
amount = 200
lifetime = 1.4
speed_scale = 0.35
randomness = 0.84
process_material = ExtResource( 8 )
texture = ExtResource( 7 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 10 )
pitch_scale = 1.05

[node name="MenuButtons" type="Control" parent="CanvasLayer"]
anchor_left = 0.316146
anchor_top = 0.442593
anchor_right = 0.683854
anchor_bottom = 0.851852
margin_bottom = -6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartGame" type="Button" parent="CanvasLayer/MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.001
margin_top = -221.0
margin_right = 350.001
margin_bottom = -103.999
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KubernetesConnect" type="Button" parent="CanvasLayer/MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.001
margin_top = -61.0
margin_right = 350.001
margin_bottom = 56.0008
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "KUBERNETES CONFIGURATION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="CanvasLayer/MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.001
margin_top = 109.0
margin_right = 350.001
margin_bottom = 226.001
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "EXIT"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KubernetesConfigPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.24974
anchor_top = 0.415278
anchor_right = 0.75026
anchor_bottom = 0.825463
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PortLabel" type="Label" parent="CanvasLayer/KubernetesConfigPanel"]
margin_left = -39.0
margin_top = 90.0
margin_right = 314.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 12 )
text = "PROXY PORT;"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/KubernetesConfigPanel/PortLabel"]
margin_left = 372.276
margin_top = 2.0
margin_right = 558.276
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 5
clear_button_enabled = true
placeholder_text = "PORT"
placeholder_alpha = 0.199
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionOK" type="Label" parent="CanvasLayer/KubernetesConfigPanel/PortLabel"]
visible = false
margin_left = 585.88
margin_top = 1.0
margin_right = 670.88
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.12549, 0.65098, 0.215686, 1 )
text = "OK"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionNotOk" type="Label" parent="CanvasLayer/KubernetesConfigPanel/PortLabel"]
visible = false
margin_left = 585.88
margin_top = 1.0
margin_right = 670.88
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.858824, 0.0980392, 0.0980392, 1 )
text = "No connection"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingImage" type="Sprite" parent="CanvasLayer/KubernetesConfigPanel/PortLabel"]
visible = false
position = Vector2( 604.771, 13.1794 )
scale = Vector2( 0.480117, 0.480117 )
z_index = 1123
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/KubernetesConfigPanel/PortLabel/LoadingImage"]
autoplay = "Spin"
anims/Spin = SubResource( 9 )

[node name="Namespace" type="Label" parent="CanvasLayer/KubernetesConfigPanel"]
margin_left = -56.0
margin_top = 160.0
margin_right = 297.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 12 )
text = "NAMESPACE;"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/KubernetesConfigPanel/Namespace"]
margin_left = 388.0
margin_top = 2.0
margin_right = 859.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 30
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "NAMESPACE"
placeholder_alpha = 0.199
caret_blink_speed = 3.71
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/KubernetesConfigPanel/Namespace"]
margin_left = 420.317
margin_top = 33.0
margin_right = 587.317
margin_bottom = 87.0
custom_fonts/font = SubResource( 6 )
custom_constants/check_vadjust = 0
custom_constants/hseparation = 2
text = "ALL NAMESPACES"

[node name="ServerSyncInterval" type="Label" parent="CanvasLayer/KubernetesConfigPanel"]
margin_left = -36.0
margin_top = 241.0
margin_right = 317.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 12 )
text = "Sync Interval;"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="CanvasLayer/KubernetesConfigPanel/ServerSyncInterval"]
margin_left = 375.0
margin_top = 3.0
margin_right = 839.0
margin_bottom = 51.0
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
min_value = 1.0
max_value = 30.0
value = 10.0
rounded = true
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondsDisplay" type="Label" parent="CanvasLayer/KubernetesConfigPanel/ServerSyncInterval"]
margin_left = 864.0
margin_right = 972.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 12 )
text = "5s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KubernetesStateHandler" parent="CanvasLayer/KubernetesConfigPanel" instance=ExtResource( 13 )]

[node name="OKButton" type="Button" parent="CanvasLayer/KubernetesConfigPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.499
margin_top = 129.5
margin_right = -32.4992
margin_bottom = 185.5
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "OK"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="CanvasLayer/KubernetesConfigPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 66.3809
margin_top = 129.5
margin_right = 305.381
margin_bottom = 185.5
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "BACK"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGamePanel" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.25
anchor_top = 0.600926
anchor_right = 0.750521
anchor_bottom = 0.825926
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SurvivalButton" type="Button" parent="CanvasLayer/StartGamePanel"]
anchor_left = 0.339
anchor_top = 0.292
anchor_right = 0.339
anchor_bottom = 0.292
margin_left = -172.778
margin_top = -38.3559
margin_right = 172.222
margin_bottom = 30.644
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "SURVIVAL"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="RichTextLabel" parent="CanvasLayer/StartGamePanel/SurvivalButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -137.494
margin_top = 86.0
margin_right = 151.506
margin_bottom = 193.0
custom_fonts/normal_font = SubResource( 11 )
text = "- Defeat after losing certain amount of pods
- Gradually increasing difficulty"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InvasionButton" type="Button" parent="CanvasLayer/StartGamePanel"]
anchor_left = 0.734
anchor_top = 0.283
anchor_right = 0.734
anchor_bottom = 0.283
margin_left = -172.373
margin_top = -34.3689
margin_right = 172.627
margin_bottom = 34.6311
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "INVASION"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="RichTextLabel" parent="CanvasLayer/StartGamePanel/InvasionButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.494
margin_top = 86.0
margin_right = 141.506
margin_bottom = 193.0
custom_fonts/normal_font = SubResource( 11 )
text = "- No defeat condition
- Static difficulty"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connected" type="Label" parent="CanvasLayer"]
margin_left = 7.0
margin_right = 353.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.141176, 0.490196, 0.0705882, 1 )
text = "CONNECTED"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/MenuButtons/StartGame" to="CanvasLayer/StartGamePanel" method="_on_StartGame_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButtons/KubernetesConnect" to="CanvasLayer/KubernetesConfigPanel" method="_on_KubernetesConnect_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButtons/ExitGame" to="CanvasLayer/MenuButtons/StartGame" method="_on_ExitGame_pressed"]
[connection signal="focus_exited" from="CanvasLayer/KubernetesConfigPanel/PortLabel/LineEdit" to="CanvasLayer/KubernetesConfigPanel" method="port_updated"]
[connection signal="text_changed" from="CanvasLayer/KubernetesConfigPanel/PortLabel/LineEdit" to="CanvasLayer/KubernetesConfigPanel" method="port_changed"]
[connection signal="state_updated" from="CanvasLayer/KubernetesConfigPanel/KubernetesStateHandler" to="CanvasLayer/KubernetesConfigPanel" method="_on_KubernetesStateHandler_state_updated"]
[connection signal="update_failed" from="CanvasLayer/KubernetesConfigPanel/KubernetesStateHandler" to="CanvasLayer/KubernetesConfigPanel" method="_on_KubernetesStateHandler_update_failed"]
[connection signal="pressed" from="CanvasLayer/KubernetesConfigPanel/OKButton" to="CanvasLayer/KubernetesConfigPanel" method="_on_OKButton_pressed"]
[connection signal="pressed" from="CanvasLayer/KubernetesConfigPanel/BackButton" to="CanvasLayer/KubernetesConfigPanel" method="_on_BackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/StartGamePanel/SurvivalButton" to="CanvasLayer/StartGamePanel" method="_on_SurvivalButton_pressed"]
[connection signal="pressed" from="CanvasLayer/StartGamePanel/InvasionButton" to="CanvasLayer/StartGamePanel" method="_on_InvasionButton_pressed"]
